alignment fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -85,6 +85,7 @@
 }
 .world-title{
   font-size: 2.5vw;
+  margin-left: 10vw;
   padding: 3vw;
   display: flex;
   flex-direction: column;
